creation des offres :done